fix: null check on image url